[Bugfix] Fix section number on mobile

--- a/src/styles/6-components/_services.scss
+++ b/src/styles/6-components/_services.scss
@@ -77,6 +77,12 @@ $clr-section-line: $color-black;
       "img     rocket"
       "black   black";
   }
+  
+  .c-services__title {
+    align-self: start;
+    justify-self: start;
+    padding-bottom: 0;
+  }
 }
 
 @include bp-small {
